# D-ATIS-to-vATIS

./: .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  release.json  tailwind.config.js  test.js  tsconfig.json  vite.config.ts
.changeset/: afraid-rivers-glow.md  big-lizards-suffer.md  chilled-frogs-kiss.md  gold-mayflies-promise.md  great-mirrors-sniff.md  late-islands-battle.md  late-pillows-stare.md  lucky-shoes-happen.md  new-rivers-rule.md  ninety-cycles-nail.md  seven-squids-relax.md  silver-rings-tickle.md  six-trees-push.md  spicy-chicken-beam.md  strong-snakes-bake.md  swift-hairs-itch.md  thin-taxis-roll.md  tough-rocks-bow.md  twelve-plums-tickle.md
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
scripts/: release.cjs
src/: App.vue  main.ts  parser.ts  stores.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: custom_contractions.json  default_settings.json  facility_config.json  runways.json
src-tauri/capabilities/: log.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  assets.rs  audio.rs  consts.rs  contraction.rs  lib.rs  main.rs  settings.rs  structs.rs  util.rs
src-tauri/src/app/: app.rs  contraction.rs  mod.rs
src-tauri/src/util/: assets.rs  mod.rs  settings.rs
src/components/: Alerts.vue  CAlerts.vue  CDropdown.vue  CLabel.vue  CLayout.vue  CSettings.vue  CTable.vue  CUpdate.vue  MainApp.vue  Settings.vue
src/lib/: consts.ts  parser.ts  router.ts  stores.ts  types.ts
src/parser/: fetch.ts  parser.ts  preset_name.ts
src/util/: parser.ts  stores.ts  types.ts
src/views/: Atis.vue  EditContraction.vue  EditContractions.vue  Home.vue  Layout.vue  RecordAtis.vue  SettingsLayout.vue
src/views/settings/: EditContraction.vue  Settings.vue
