[package]
name = "D-ATIS-to-vATIS"
version = "1.3.2"
description = "Converts real world FAA D-ATIS's to vATIS profiles"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "D-ATIS-to-vATIS"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-alpha.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
