[package]
name = "d_atis_to_vatis"
version = "1.7.1"
description = "Converts real world FAA D-ATIS's to vATIS profiles"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "d_atis_to_vatis"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.0.0-rc.2", features = [] }
dotenv = "0.15.0"

[dependencies]
serde_json = { version = "1.0.123", features = ["preserve_order"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
serde = { version = "1.0.206", features = ["derive"] }
tauri = { version = "^2.0.0-rc.2", features = [] }
tauri-plugin-dialog = "^2.0.0-rc.0"
tauri-plugin-log = "^2.0.0-rc.0"
tauri-plugin-process = "^2.0.0-rc.0"
sysinfo = "0.31.2"
log = "0.4.22"
anyhow = "1.0.86"
rodio = "0.19.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc.0"
